(hopefully) fixed Xray filter not working on IOS

--- a/demos/FMP/style.css
+++ b/demos/FMP/style.css
@@ -181,7 +181,7 @@ padding-bottom: 0;
 	border: 1.5vw solid white;
 	border-top: none;
 	background-color: rgba(255,255,255,0);
-	backdrop-filter: grayscale(1) invert(1);
+	-webkit-backdrop-filter: grayscale(1) invert(1);
 }
 
 .btn-orange {
